test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/distinct_local_and_extern.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: a
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 5
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_a
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: a
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[3]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: a
                          None: 
                          Int: 
                          CExtern: 
                    CS: 
                      CIf: 
                        CBinary: 
                          CNotEqual: 
                          CVar: 
                            TIdentifier: a
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 5
                            None: 
                          None: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                        None: 
                    CS: 
                      CExpression: 
                        CAssignment: 
                          None: 
                          CVar: 
                            TIdentifier: a
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 4
                            None: 
                          None: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CVar: 
                    TIdentifier: a
                    None: 
                  CFunctionCall: 
                    TIdentifier: return_a
                    List[0]: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
