test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/non_constant_static_initializer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: a
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        Int: 
        None: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: b
        CSingleInit: 
          CBinary: 
            CAdd: 
            CConstant: 
              CConstInt: 
                TInt: 1
              None: 
            CVar: 
              TIdentifier: a
              None: 
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: b
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
